# astrbot_plugin_company_rising

./: .gitignore  README.md  __init__.py  _conf_schema.json  _update_rest.ps1  _update_skills.ps1  achievements.py  advance_month.py  campus.py  campus_endings.py  ceo.py  competitors.py  employee.py  employee_management.py  ending_archive.py  events.py  finance.py  formatting.py  game_manager.py  game_state.py  main.py  metadata.yaml  projects.py  prompt_templates.py  pyproject.toml  random_events.py  utils.py
campus/: campus.py  campus_events.py
company/: achievements.py  candidates.py  ceo.py  customers.py  employee_management.py  finance.py  recruit.py
docs/: CHANGELOG.md  README.md  best-practices.md  更新记录.md
engine/: advance_month.py  competitors.py  game_manager.py  game_prompts.py  game_state.py  projects.py  random_events.py
llm/: llm_service.py  ontology_bridge.py  prompt_templates.py
skill/: SKILL.md  nano.md
skill/references/: anti-hallucination.md  commands.md  state-schema.md  traceability.md
utils/: constants.py  endings.py  formatting.py  storage.py
