[project]
name = "astrbot-plugin-company-rising"
version = "1.8.0"
description = "公司崛起 - 文字商业模拟游戏 AstrBot 插件"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100

# Lint rules
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20", # flake8-print (no print in production)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "T201",  # print statements allowed in tests/debug
]
per-file-ignores = {
    "bench/*.py" = ["T201", "S101", "F541", "E702", "F401", "F841", "I001", "E402", "F821", "F841", "F403"],
    "test_*.py" = ["T201", "F541", "E702", "F401", "F841", "I001", "E402", "F821", "F841"],
    "_gen_*.py" = ["T201", "F541", "E702"],
    "baseline.py" = ["T201", "F541", "E702", "F401", "F841", "I001", "E402"],
}

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.isort]
known-first-party = ["astrbot_plugin_company_rising"]
known-third-party = ["astrbot", "tiktoken", "pydantic", "aiohttp", "httpx"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
# B008: Do not perform function calls in argument defaults
# (we intentionally use None as default for mutable args in some places)
# B006: Do not use mutable data structures for argument defaults
# (we use copy.deepcopy correctly)

[tool.ruff.lint.flake8-comprehensions]
# C401: Unnecessary list comprehension - rewrite as a list literal
# C402: Unnecessary generator - rewrite as a generator expression
# C403: Unnecessary dict comprehension - rewrite as a dict literal
# C404: Unnecessary set comprehension - rewrite as a set literal
# C408: Unnecessary list comprehension - rewrite as a call to list

[tool.ruff.lint.mccabe]
max-complexity = 15